--- a/index.html
+++ b/index.html
@@ -5,9 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment-secund</title>
+        <!-- link:style.css -->
     <link rel="stylesheet" href="style.css">
+    <!-- font-awesome -->
+    <script src="https://kit.fontawesome.com/e45fa27b86.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>good morning</h1>
+    <!-- Header -->
+    <header>
+        <nav class="nav-menu">
+            <span>
+                <p class="top-title">Influencer products</p>
+            </span>
+            <span class="nav-info">
+                <a href="" class="info">Home</a>
+                <a href="" class="info">Products</a>
+                <a href="" class="info">sin up</a>
+                <a href="" class="info">Log In</a>
+                <a href="" class="info"><i class="fas fa-search"></i></a>
+                <a href="" class="info"><i class="fas fa-shopping-cart"></i></a>
+            </span>
+        </nav>
+    </header>
+    <!-- top-section -->
+    <section>
+        <article class="top-secton">
+            <div class="Influencer-info">
+                <h1>Start your Journey as 
+                    Influencer</h1>
+                    <p>In an age where anyone can become an advertiser, we are more skeptical than ever about our online activity and purchases.</p>
+                    <button type="submit">
+                        Preebook now <i class="fas fa-arrow-right"></i>
+                    </button>
+            </div>
+
+            <div class="camera">
+
+            </div>
+        </article>
+
+    </section>
 </body>
 </html>
