--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <section>
         <article class="top-secton">
             <div class="Influencer-info">
-                <h1>Start your Journey as 
+                <h1 class="Influencer-title">Start your Journey as 
                     Influencer</h1>
                     <p>In an age where anyone can become an advertiser, we are more skeptical than ever about our online activity and purchases.</p>
-                    <button type="submit">
+                    <button type="submit" >
                         Preebook now <i class="fas fa-arrow-right"></i>
                     </button>
             </div>
