--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="camera">
-
+                <img src="images/main-camera.png" alt="">
             </div>
         </article>
 
