populer-colection-add

--- a/index.html
+++ b/index.html
@@ -45,5 +45,30 @@
         </article>
 
     </section>
+    <!-- Popular Collection area -->
+    <h2 class="populer-taitle">Popular Collection</h2>
+   <section class="Popular-Collection">
+    <article class="collection">
+        <div class="collection-thamnial">
+            <img src="images/tripod.png" alt="">
+        </div>
+        <div class="collection-info">
+            <h2 class="collection-title">Flex Tripod</h2>
+            <h3 class="dolar">$50.48</h3>
+            <span class="star-container">
+                <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="star-valu">4.99</div>
+            </span>
+            <p class="peragraph">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+    </article>
+   </section>
 </body>
 </html>
