populer-section-add

--- a/index.html
+++ b/index.html
@@ -64,6 +64,175 @@
                 <i class="fas fa-star-half-alt"></i>
                 </div>
                 <div class="star-valu">4.99</div>
+                
+            </span>
+            <p class="peragraph">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+    </article>
+    <article class="collection">
+        <div class="collection-thamnial">
+            <img src="images/single-light.png" alt="">
+        </div>
+        <div class="collection-info">
+            <h2 class="collection-title">Flex Tripod</h2>
+            <h3 class="dolar">$50.48</h3>
+            <span class="star-container">
+                <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="star-valu">4.99</div>
+            </span>
+            <p class="peragraph">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+    </article>
+    <article class="collection">
+        <div class="collection-thamnial">
+            <img src="images/setup.png" alt="">
+        </div>
+        <div class="collection-info">
+            <h2 class="collection-title">Flex Tripod</h2>
+            <h3 class="dolar">$50.48</h3>
+            <span class="star-container">
+                <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="star-valu">4.99</div>
+            </span>
+            <p class="peragraph">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+    </article>
+    <article class="collection">
+        <div class="collection-thamnial">
+            <img src="images/mic.png" alt="">
+        </div>
+        <div class="collection-info">
+            <h2 class="collection-title">Flex Tripod</h2>
+            <h3 class="dolar">$50.48</h3>
+            <span class="star-container">
+                <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="star-valu">4.99</div>
+            </span>
+            <p class="peragraph">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+    </article>
+    <article class="collection">
+        <div class="collection-thamnial">
+            <img src="images/lights.png" alt="">
+        </div>
+        <div class="collection-info">
+            <h2 class="collection-title">Flex Tripod</h2>
+            <h3 class="dolar">$50.48</h3>
+            <span class="star-container">
+                <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="star-valu">4.99</div>
+            </span>
+            <p class="peragraph">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+    </article>
+    <article class="collection">
+        <div class="collection-thamnial">
+            <img src="images/gear.png" alt="">
+        </div>
+        <div class="collection-info">
+            <h2 class="collection-title">Flex Tripod</h2>
+            <h3 class="dolar">$50.48</h3>
+            <span class="star-container">
+                <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="star-valu">4.99</div>
+            </span>
+            <p class="peragraph">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+    </article>
+    <article class="collection">
+        <div class="collection-thamnial">
+            <img src="images/drone.png" alt="">
+        </div>
+        <div class="collection-info">
+            <h2 class="collection-title">Flex Tripod</h2>
+            <h3 class="dolar">$50.48</h3>
+            <span class="star-container">
+                <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="star-valu">4.99</div>
+            </span>
+            <p class="peragraph">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+    </article>
+    <article class="collection">
+        <div class="collection-thamnial">
+            <img src="images/airpod.png" alt="">
+        </div>
+        <div class="collection-info">
+            <h2 class="collection-title">Flex Tripod</h2>
+            <h3 class="dolar">$50.48</h3>
+            <span class="star-container">
+                <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="star-valu">4.99</div>
+            </span>
+            <p class="peragraph">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+    </article>
+    <article class="collection">
+        <div class="collection-thamnial">
+            <img src="images/camera.png" alt="">
+        </div>
+        <div class="collection-info">
+            <h2 class="collection-title">Flex Tripod</h2>
+            <h3 class="dolar">$50.48</h3>
+            <span class="star-container">
+                <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="star-valu">4.99</div>
             </span>
             <p class="peragraph">Wordwide shifting available
                 Buyers protection possible!</p>
