--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <img src="images/single-light.png" alt="">
         </div>
         <div class="collection-info">
-            <h2 class="collection-title">Flex Tripod</h2>
-            <h3 class="dolar">$50.48</h3>
+            <h2 class="collection-title">Green Screen</h2>
+            <h3 class="dolar">$25.48</h3>
             <span class="star-container">
                 <div class="star">
                 <i class="fas fa-star"></i>
@@ -96,8 +96,8 @@
             <img src="images/setup.png" alt="">
         </div>
         <div class="collection-info">
-            <h2 class="collection-title">Flex Tripod</h2>
-            <h3 class="dolar">$50.48</h3>
+            <h2 class="collection-title">Photoshoot set</h2>
+            <h3 class="dolar">$820.40</h3>
             <span class="star-container">
                 <div class="star">
                 <i class="fas fa-star"></i>
@@ -117,8 +117,8 @@
             <img src="images/mic.png" alt="">
         </div>
         <div class="collection-info">
-            <h2 class="collection-title">Flex Tripod</h2>
-            <h3 class="dolar">$50.48</h3>
+            <h2 class="collection-title">microphone</h2>
+            <h3 class="dolar">$120.25</h3>
             <span class="star-container">
                 <div class="star">
                 <i class="fas fa-star"></i>
@@ -138,8 +138,8 @@
             <img src="images/lights.png" alt="">
         </div>
         <div class="collection-info">
-            <h2 class="collection-title">Flex Tripod</h2>
-            <h3 class="dolar">$50.48</h3>
+            <h2 class="collection-title">Light Setup</h2>
+            <h3 class="dolar">$1200.00</h3>
             <span class="star-container">
                 <div class="star">
                 <i class="fas fa-star"></i>
@@ -156,11 +156,11 @@
     </article>
     <article class="collection">
         <div class="collection-thamnial">
-            <img src="images/gear.png" alt="">
+            <img src="images/action.png" alt="">
         </div>
         <div class="collection-info">
-            <h2 class="collection-title">Flex Tripod</h2>
-            <h3 class="dolar">$50.48</h3>
+            <h2 class="collection-title">Action Camera</h2>
+            <h3 class="dolar">$380.00</h3>
             <span class="star-container">
                 <div class="star">
                 <i class="fas fa-star"></i>
@@ -180,8 +180,8 @@
             <img src="images/drone.png" alt="">
         </div>
         <div class="collection-info">
-            <h2 class="collection-title">Flex Tripod</h2>
-            <h3 class="dolar">$50.48</h3>
+            <h2 class="collection-title">Drone</h2>
+            <h3 class="dolar">$980.25</h3>
             <span class="star-container">
                 <div class="star">
                 <i class="fas fa-star"></i>
@@ -201,8 +201,8 @@
             <img src="images/airpod.png" alt="">
         </div>
         <div class="collection-info">
-            <h2 class="collection-title">Flex Tripod</h2>
-            <h3 class="dolar">$50.48</h3>
+            <h2 class="collection-title">Airbuds</h2>
+            <h3 class="dolar">$100.00</h3>
             <span class="star-container">
                 <div class="star">
                 <i class="fas fa-star"></i>
@@ -222,8 +222,8 @@
             <img src="images/camera.png" alt="">
         </div>
         <div class="collection-info">
-            <h2 class="collection-title">Flex Tripod</h2>
-            <h3 class="dolar">$50.48</h3>
+            <h2 class="collection-title">Vlogging Camera</h2>
+            <h3 class="dolar">$1800.80</h3>
             <span class="star-container">
                 <div class="star">
                 <i class="fas fa-star"></i>
