--- a/index.html
+++ b/index.html
@@ -237,7 +237,21 @@
             <p class="peragraph">Wordwide shifting available
                 Buyers protection possible!</p>
         </div>
+        
     </article>
+    <div>
+        <a  href="" class="see-more" >see more <i class="fas fa-arrow-right"></i></a>
+    </div>
    </section>
+  <section class="blogers">
+<div class="live">
+    <img src="images/blogs.jpg" alt="">
+</div>
+<div class="live-info">
+    <h2 class="Influencer-title">Branded content on social media</h2>
+    <p>Ah yes, the familiar tip that goes on most lists of how to do anything well: practice. The more you do it, the easier it will be to do it well, so give yourself the assignment of writing blog titles regularly.</p>
+   <a href="" class="join-now">Join Now <i class="fas fa-arrow-right"></i></a></a>
+</div>
+  </section>
 </body>
 </html>
