--- a/index.html
+++ b/index.html
@@ -253,5 +253,17 @@
    <a href="" class="join-now">Join Now <i class="fas fa-arrow-right"></i></a></a>
 </div>
   </section>
+  <!-- footer  -->
+  <footer>
+      <h1>Influencer products</h1>
+      <h2>Copyright <i class="far fa-copyright"></i> 2020  influencer products</h2>
+      <h2>All rights reserved</h2>
+      <div class="icone">
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-youtube"></i>
+        <i class="fas fa-globe"></i>
+      </div>
+  </footer>
 </body>
 </html>
