--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <!-- top-section -->
-    <section>
+    <section class="container">
         <article class="top-secton">
             <div class="Influencer-info">
                 <h1 class="Influencer-title">Start your Journey as 
